@@ -461,3 +461,4 @@ int pinpad_getline (int msg_code, uint32_t timeout_usec);
 extern uint8_t _regnual_start, __heap_end__[];
 
 int check_crc32 (const uint32_t *start_p, const uint32_t *end_p);
+uint8_t * sram_address (uint32_t offset);
