@@ -1,7 +1,10 @@
 2017-04-28  NIIBE Yutaka  <gniibe@fsij.org>
 
-	* src/usb_ctrl.c (download_check_crc32): Use check_crc32.
 	* src/mcu-stm32f103.c: New.
+	(check_crc32, sram_address): New.
+
+	* src/usb_ctrl.c (download_check_crc32): Use check_crc32 and
+	sram_address.
 
 	* src/openpgp-do.c (gpg_write_digital_signature_counter): Fix
 	writing lower 10-bit.
